Fix styling of tabs in dark mode (#479)
* Fix styling of tabs in dark mode


* Cleanup unapplied vuepress-tabs style

This CSS does not get applied because of the .vuepress-tabs classname,
this class is not used in the DOM.
It also seems that this part of the style defs gets removed when Vuepress builds the website because it is unused.


* Re-arrange tabs darkmode CSS


---------

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -8,35 +8,35 @@
 /* Open Sans font weights 300-400 */
 /* latin-ext */
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OXOhpOqc.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OXOhpOqc.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OUuhp.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OUuhp.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 .navbar:not(.headroom--top):not(.transparent)
@@ -48,21 +48,21 @@
 
 .homepage
     .navbar:not(.ready)
-      opacity 0
-      background transparent
-      color white
-
-      border-bottom none
-      box-shadow none
-      .logo
         opacity 0
-      .nav-dropdown
-        color black
-      .nav-links > .nav-item:last-child
-        svg
-            color white
-      .dropdown-title .arrow
-          border-top 6px solid #fff
+        background transparent
+        color white
+
+        border-bottom none
+        box-shadow none
+        .logo
+            opacity 0
+        .nav-dropdown
+            color black
+        .nav-links > .nav-item:last-child
+            svg
+                color white
+        .dropdown-title .arrow
+            border-top 6px solid #fff
 
 
 @media (min-width: 860px)
@@ -90,7 +90,7 @@
     .nav-dropdown
         // background-color white
         box-shadow rgba(10%,10%,10%,25%) 0 0 5px
-    
+
     .nav-item a
         // font-family 'Open Sans', sans-serif
         font-weight 400
@@ -112,10 +112,10 @@
     margin-bottom .2rem
 
 .sidebar-group.is-sub-group>.sidebar-heading:not(.clickable)
-  opacity 1 !important
+    opacity 1 !important
 
 .arrow.right
-  border-left: 6px solid #333 !important
+    border-left: 6px solid #333 !important
 
 .sidebar
     background-color #f7f7f7 !important
@@ -176,60 +176,13 @@
     display none
 
 a[href*='.openhab.org'] .outbound
-        display none
+    display none
 
 .nav-item > a.external:hover
     border-bottom 2px solid #ff7214
 
 .custom-block.tip
     border-color #2196f3 !important
-
-/* Tweaks for vuepress-plugin-tabs */
-
-.vuepress-tabs
-    .tabs-component
-        .tabs-component-tab.is-active .tabs-component-tab-a
-                color black
-        .tabs-component-panel
-            margin-top -8.4rem
-            padding-top 8.4rem
-
-@media (min-width: 700px)
-    .vuepress-tabs
-        .tabs-component-tab
-            border solid 1px #bbb
-            &.is-active
-                border-bottom solid 1px #fff
-                z-index 2
-                transform translateY(0)
-        .tabs-component-panels
-            border solid 1px #bbb
-
-@media (max-width: 699px)
-    .vuepress-tabs
-        .tabs-component-tabs
-            border 0
-            align-items center
-            display flex
-            justify-content flex-start
-            margin-bottom -2px
-            padding-left -1rem
-        .tabs-component-tab
-            background-color #fff
-            border solid 1px #bbb
-            border-radius 3px 3px 0 0
-            margin-right .25em
-            transition transform .3s ease
-            &.is-active
-                border-bottom solid 1px #fff
-                z-index 2
-                transform translateY(0)
-        .tabs-component-panels
-            background-color #fff
-            border-top solid 1px #bbb
-            padding-top 0
-            margin-top 1px
-
 
 /*** DARK MODE 😎 ***/
 
@@ -258,7 +211,7 @@ a[href*='.openhab.org'] .outbound
 
     .nav-item > a:hover, .nav-item > a.router-link-active
         color rgb(221, 221, 221) !important
-            
+
     .dropdown-wrapper .nav-dropdown
         background-color rgba(0, 0, 0, 0.9) !important
         border-color rgb(68, 68, 68) !important
@@ -326,7 +279,7 @@ a[href*='.openhab.org'] .outbound
     footer
         background black !important
         border-top none !important
-        
+
         .legal a
             color #aaa !important
 
@@ -374,7 +327,7 @@ a[href*='.openhab.org'] .outbound
             background rgb(21, 32, 43)
         .alternativeto-banner
             background-image linear-gradient(#2c4961,#222222) !important
-    
+
     .addons .addon
         background #fff
     .addon-logo
@@ -391,3 +344,17 @@ a[href*='.openhab.org'] .outbound
 
     .post-cover
         background-color rgba(127,51,0,.667) !important
+
+    /* for vuepress-plugin-tabs */
+    .tabs-component-tab.is-active .tabs-component-tab-a
+        color #f60 !important
+    .tabs-component-tab .tabs-component-tab-a
+        color #a6a6a6
+        background-color #111
+    .tabs-component-tab
+        border-color #a6a6a6
+        &.is-active
+            border-bottom solid 1px #111
+    .tabs-component-panels
+        background-color #111 !important
+        border-color #a6a6a6
